Closed Bug 544017 Opened 16 years ago Closed 16 years ago

Fix DEBUG_A11Y compile path and move TestChildCache to DEBUG

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: davidb, Assigned: davidb)

Details

Attachments

(1 file, 2 obsolete files)

Attached patch easy fix (obsolete) — Splinter Review
No description provided.
Attachment #425007 - Attachment is patch: true
Attachment #425007 - Attachment mime type: application/octet-stream → text/plain
Attachment #425007 - Flags: review?(surkov.alexander)
Attachment #425007 - Flags: review?(marco.zehe)
Comment on attachment 425007 [details] [diff] [review] easy fix change the uuid and make this under DEBUG not DEBUG_A11Y.
Comment on attachment 425007 [details] [diff] [review] easy fix I'd like to look at next patch
Attachment #425007 - Flags: review?(surkov.alexander)
(In reply to comment #1) > (From update of attachment 425007 [details] [diff] [review]) > change the uuid and make this under DEBUG not DEBUG_A11Y. Did you mean the component ID? The uuid defines the interface nsIAccessible which hasn't changed. Enn tells me we never need to change the component ID (NS_ACCESSIBLE_IMPL_CID). I'm actually unsure how the nsAccessible component ID is used. (Maybe I slept wrong last night) I really don't want to use DEBUG, because I would like to keep the information separate. I'd like to be able to make -B -CXXFLAGS="-DDEBUG_A11Y" because "-DDEBUG" would pick up all kinds of spew/noise.
Summary: Compile errors when DEBUG_A11Y is defined. → Fix DEBUG_A11Y compile path and move TestChildCache to DEBUG
Better I think :)
Assignee: nobody → bolterbugz
Attachment #425007 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #425027 - Flags: review?(surkov.alexander)
Attachment #425007 - Flags: review?(marco.zehe)
Attachment #425027 - Attachment is obsolete: true
Attachment #425033 - Flags: review?(surkov.alexander)
Attachment #425027 - Flags: review?(surkov.alexander)
Attachment #425033 - Flags: review?(surkov.alexander) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: