Bug 544017 - Fix DEBUG_A11Y compile path and move TestChildCache to DEBUG; r=surkov